--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   audioplayers: ^4.1.0
   circular_countdown_timer: ^0.2.3
-  wakelock: ^0.6.2
-  shared_preferences: ^2.1.2
-  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +62,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
-    - assets/sounds/
-    - assets/defaultSessions.json
+    - assets/poses.json
+    - assets/images/DownwardDog.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
