--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   audioplayers: ^4.1.0
   circular_countdown_timer: ^0.2.3
   wakelock: ^0.6.2
+  shared_preferences: ^2.1.2
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
   assets:
     - assets/images/
     - assets/sounds/
+    - assets/defaultSessions.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
