--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/images/yogaActions/
+    - assets/sounds/yogaActions/
     - assets/sounds/
     - assets/defaultSessions.json
 
