--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   wakelock: ^0.6.2
   shared_preferences: ^2.1.2
   http: ^0.13.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
